[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["AleksandrStrulkov <astrulkov@yandex.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.98.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
